Fix empty state info label font-size too small

--- a/data/application.css
+++ b/data/application.css
@@ -102,5 +102,5 @@
 }
 
 .draft-empty-state-info {
-    font-size: 0.8em;
+    font-size: 1.0em;
 }
